# op-schedule-converter

./: .gitignore  LICENSE  README.md  pyproject.toml
schedule-results/: schedule-example.md
source/: pair_info-example.json  pairs-example.json  schedule-source-example.doc
src/schedule/: classes.py  main.py
