[project]
name = "Schedule"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pavlo Pohorieltsev", email = "49622129+makisukurisu@users.noreply.github.com"},
]
dependencies = [
    "pydantic>=2.9.1",
    "typer>=0.12.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
make.cmd = "pdm run main.py"
make.working_dir = "src/schedule"